--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "dev": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/alambre-1/oliver/issues"
   },
-  "homepage": "https://github.com/alambre-1/oliver#readme"
+  "homepage": "https://github.com/alambre-1/oliver#readme",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
